--- a/css/main.css
+++ b/css/main.css
@@ -40,74 +40,237 @@
   font-display: swap;
   src: local('Open Sans Bold'), local('OpenSans-Bold'), url(https://fonts.gstatic.com/s/opensans/v17/mem5YaGs126MiZpBA-UN7rg-VQ.ttf) format('truetype');
 }
+* {
+  margin: 0;
+  padding: 0;
+  border: 0;
+}
+html {
+  font-family: 'Open Sans', sans-serif;
+  color: #000000;
+}
 h1 {
   color: #ffffff;
   font-family: 'Open Sans', sans-serif;
   font-weight: 700;
-  font-size: 2em;
+  font-size: 1.25em;
 }
 h2 {
   font-family: 'Lemonada', cursive;
   font-weight: 700;
   color: #6a9923;
-  font-size: 1.35em;
+  font-size: .75em;
 }
 h3 {
   font-family: 'Open Sans', sans-serif;
-  font-size: 1.5em;
+  font-size: .75em;
+  color: #000000;
 }
 h4 {
   font-family: 'Arvo', serif;
   color: #154a96;
-  font-size: 1.75em;
+  font-size: .5em;
 }
 p {
   font-family: 'Open Sans', sans-serif;
+  color: #000000;
 }
-/**end of images on menu**/
+section {
+  padding: 10px;
+}
+section article {
+  padding: 10px;
+}
+img {
+  width: 75%;
+  height: auto;
+  max-width: 400px;
+  padding: 10px;
+}
+a {
+  color: #ffffff;
+}
+a:link,
+a:active {
+  text-decoration: none;
+}
+/**header**/
 header ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
   overflow: hidden;
-  background-color: #6a9923;
+  background-color: #ffffff;
+  font-size: 1.25em;
 }
 header li {
   float: left;
-  border-right: 1px solid #bbb;
 }
 header li a {
   display: block;
-  color: white;
+  color: #000000;
   text-align: center;
-  padding: 14px 16px;
+  padding: 15px;
   text-decoration: none;
 }
 header li a:hover {
   background-color: #154a96;
+  color: #ffffff;
 }
 header .active {
-  background-color: #000000;
+  background-color: #154a96;
+  color: #ffffff;
 }
 header #small-header-logo {
-  width: 20%;
+  width: 100%;
   height: auto;
   max-width: 100px;
+  padding-right: 25px;
+}
+.container {
+  padding: 0 5%;
+}
+#hamburger-icon img {
+  height: 100%;
+}
+#mobile-nav {
+  align-self: flex-end;
+}
+.sub-menu {
+  position: absolute;
+  background-color: #6a9923;
+  width: 100%;
+  left: 0;
+  text-align: center;
+  top: 0;
+  display: flex;
+  flex-direction: column;
+}
+.sub-menu ul {
+  margin-top: 10vh;
+}
+.sub-menu ul li {
+  padding: 30px;
+}
+.hidden {
+  height: 0;
+  width: 0;
+  overflow: hidden;
+  transition: width 0.3s ease-in-out;
+}
+.show {
+  height: 100%;
+  width: 100%;
+}
+#int-header {
+  display: flex;
+  flex-direction: column;
+}
+#int-header .header-nav {
+  height: 10%;
+}
+#int-header .header-bottom {
+  height: 250px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.hero-image {
+  background-image: url("/images/plastic.jpg");
+  background-color: #000000;
+  height: 200px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+}
+.hero-text {
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+/**read more button**/
+#more {
+  display: none;
+}
+.button {
+  background-color: #154a96;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  margin: 10px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+}
+.button:hover {
+  background-color: #6a9923;
+  color: white;
+}
+/**Social Media section**/
+.cards {
+  background-color: #6a9923;
+}
+column {
+  float: left;
+  width: 90%;
+  padding: 5%;
+}
+/* Clearfix (clear floats) */
+.row::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+figcaption {
+  font-family: myriad-pro, sans-serif;
+  font-size: 1.25em;
+  text-align: center;
+}
+#sevenways img {
+  max-width: 550px;
 }
 /**media query for wider screens**/
-@media (min-width: 540px) {
-  article h2 {
-    font-size: 1.65em;
+@media (min-width: 998px) {
+  header #page-header {
+    height: 100vh;
+    width: 20%;
+    background-color: #ffffff;
   }
-  article h1 {
-    font-size: 2.7em;
+  header #page-header #desktop-nav {
+    display: block;
   }
-  article h3 {
-    font-size: 2em;
+  header #page-header h1 {
+    font-size: 2.5rem;
   }
-}
-@media (min-width: 780px) {
-  h1 {
-    font-size: 2.5em;
+  header #hamburger-icon {
+    display: none;
+  }
+  header #desktop-menu {
+    height: 100vh;
+    text-align: right;
+  }
+  header #desktop-menu ul li {
+    padding: 30px 0;
+    list-style: none;
+  }
+  header #int-header {
+    flex-direction: row;
+  }
+  header #int-header .header-nav {
+    width: 30%;
+  }
+  /*columns of photos*/
+  figcaption {
+    font-size: 1.5em;
+  }
+  .column {
+    float: left;
+    text-align: center;
+    width: 35%;
+    padding: 1%;
   }
 }
