--- a/less/main.less
+++ b/less/main.less
@@ -1,36 +1,71 @@
-@import url('https://fonts.googleapis.com/css2?family=Arvo:wght@400;700&family=Lemonada:wght@400;700&family=Open+Sans:wght@400;700&display=swap');
+@import 'variables';
+@import 'mixins';
+
+ *{
+    margin: 0;
+    padding: 0;
+    border: 0;
+}
+
+html {
+    font-family: 'Open Sans', sans-serif;
+    color: @black;
+}
 
 h1 {
-    color: #ffffff;
+    color: @white;
     font-family: 'Open Sans', sans-serif;
     font-weight: 700;
-    font-size: 2em;
+    font-size: 1.25em;
 }
 
 h2 {
     font-family:  'Lemonada', cursive;
     font-weight: 700;
-    color: #6a9923;
-    font-size: 1.35em;
+    color: @green;
+    font-size: .75em;
 }
 
 h3 {
     font-family: 'Open Sans', sans-serif;
-    font-size: 1.5em;
+    font-size: .75em;
+    color: @black;
 }
 
 h4 {
     font-family: 'Arvo', serif;
-    color: #154a96;
-    font-size: 1.75em;
+    color:@blue;
+    font-size: .5em;
 }
 
 p {
     font-family: 'Open Sans', sans-serif;
+    color: @black;
 }
 
+section {
+    padding: 10px;
+    article {
+        padding: 10px;
+    }
+}
+
+img {
+    width: 75%;
+    height: auto;
+    max-width: 400px;
+    padding: 10px;
+}
+
+a {
+    color: @white;
+}
+
+a:link, a:active {
+    text-decoration: none;
+}
     
-/**end of images on menu**/
+/**header**/
 header {
 
     ul {
@@ -38,55 +73,210 @@ header {
        margin: 0; 
        padding: 0;
        overflow: hidden;
-       background-color: #6a9923;
+       background-color:@white;
+       font-size: 1.25em;
     }
 
     li {
        float: left;
-       border-right: 1px solid #bbb;
     }
 
     li a {
         display: block;
-        color: white;
+        color: @black;
         text-align: center;
-        padding: 14px 16px;
+        padding: 15px;
         text-decoration: none;
-        }
+    }
 
     li a:hover {
-        background-color: #154a96;
-        }
+        background-color: @blue;
+        color: @white;
+    }
     
     .active {
-        background-color:#000000;
+        background-color: @blue;
+        color: @white;
     }
 
    #small-header-logo {
-        width: 20%;
+        width: 100%;
         height: auto;
         max-width: 100px;
+        padding-right: 25px;
     }
+}
+
+//hamburger menu and header
+    .container {
+        padding: 0 5%;
+    }
+
+    #hamburger-icon img {
+        height: 100%;
+    }
+        
+    #mobile-nav {
+        align-self: flex-end;
+    }
+
+    .sub-menu {
+        position: absolute;
+        background-color: @green;
+        width: 100%;
+        left: 0;
+        text-align: center;
+        top:0;
+        display: flex;
+        flex-direction: column;
+        ul {
+            margin-top: 10vh;
+            li {
+                padding: 30px;
+            }
+        }
+    }
+
+    .hidden {
+        height:0;
+        width: 0;
+        overflow: hidden;
+        transition: width .3s ease-in-out;
+    }
+
+    .show {
+        height:100%;
+        width: 100%;
+    }
+
+    #int-header {
+        display:flex;
+        flex-direction: column;
+        .header-nav{
+            height: 10%;
+         }
+        .header-bottom {
+            height: 250px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+    }
+
+//*hero image container**/
+.hero-image {
+    background-image: url("/images/plastic.jpg");
+    background-color: @black;
+    height: 200px;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+}
+
+.hero-text {
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+/**read more button**/
+#more {
+    display: none;
+}
+
+.button {
+  background-color: @blue;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  margin: 10px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+}
+
+.button:hover {
+  background-color: @green;
+  color: white;
+}
+
+/**Social Media section**/
+.cards {
+  background-color: @green;
+}
+
+column {
+  float: left;
+  width: 90%;
+  padding: 5%;
+}
+
+/* Clearfix (clear floats) */
+.row::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
+figcaption {
+  font-family: myriad-pro, sans-serif;
+  font-size: 1.25em;
+  text-align: center;
+}
+
+#sevenways img {
+  max-width: 550px;
 }
 
 /**media query for wider screens**/
+@media (min-width: @laptop) {
+    header {
+        #page-header {
+            height:100vh;
+            width: 20%;
+            background-color: @white;
+            #desktop-nav {
+                display: block;
+            }
+            h1 {
+                font-size: 2.5rem;
+            }
+        }
 
-@media (min-width: 540px) {
-    article {
-        h2 {
-            font-size: 1.65em;
+        #hamburger-icon {
+            display: none;
+        }
+        #desktop-menu {
+            height: 100vh;
+            text-align: right;
+            ul {
+                li {
+                    padding: 30px 0;
+                    list-style: none;
+                }
+             }
+        }
+        #int-header {
+            flex-direction: row;
+            .header-nav {
+                width: 30%;
             }
-        h1 {
-            font-size: 2.7em;
-            }
-        h3 {
-            font-size: 2em;
         }
     }
-}
-
-@media (min-width: 780px) {
-    h1 {
-        font-size: 2.5em;
+    /*columns of photos*/
+     figcaption {
+    font-size: 1.5em;
     }
+
+    .column {
+    float: left;
+    text-align: center;
+    width: 35%;
+    padding: 1%;
+  }
+
 }
