--- a/less/main.less
+++ b/less/main.less
@@ -232,6 +232,59 @@ figcaption {
   max-width: 550px;
 }
 
+.learnMore {
+    background-color: @white;
+}
+
+.campaigns {
+    background-color: @lightgreen;
+}
+
+//footer
+footer {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    background-color: @green;
+}
+
+/* Style all font awesome icons */
+.fa {
+  padding: 20px;
+  font-size: 30px;
+  width: 35px;
+  text-align: center;
+  text-decoration: none;
+  border-radius: 50%;
+}
+
+/* Add a hover effect if you want */
+.fa:hover {
+  opacity: 0.7;
+}
+
+/* Facebook */
+.fa-facebook {
+  background: @blue;
+  color: @white;
+}
+
+/* Twitter */
+.fa-twitter {
+  background: @blue;
+  color: @white;
+}
+/*Pinterest */
+.fa-pinterest {
+  background: red;
+  color: @white;
+}
+/* Instagram */
+.fa-instagram {
+  background: yellow;
+  color: @white;
+}
+
 /**media query for wider screens**/
 @media (min-width: @laptop) {
     header {
