--- a/less/main.less
+++ b/less/main.less
@@ -17,34 +17,39 @@ h1 {
     font-family: 'Open Sans', sans-serif;
     font-weight: 700;
     font-size: 1.25em;
+    padding: 5px;
 }
 
 h2 {
     font-family:  'Lemonada', cursive;
     font-weight: 700;
     color: @green;
-    font-size: .75em;
+    font-size: 1.1em;
+    padding: 5px;
 }
 
 h3 {
     font-family: 'Open Sans', sans-serif;
-    font-size: .75em;
+    font-size: 1em;
     color: @black;
+    padding: 3px;
 }
 
 h4 {
     font-family: 'Arvo', serif;
     color:@blue;
-    font-size: .5em;
+    font-size: .75em;
+    padding: 3px;
 }
 
 p {
     font-family: 'Open Sans', sans-serif;
     color: @black;
+    padding: 10px;
 }
 
 section {
-    padding: 10px;
+    padding: 10px 0px;
     article {
         padding: 10px;
     }
@@ -206,7 +211,7 @@ header {
 
 /**Social Media section**/
 .cards {
-  background-color: @green;
+  background-color: @gray;
 }
 
 column {
@@ -228,16 +233,34 @@ figcaption {
   text-align: center;
 }
 
+/*section-specific formatting changes*/
 #sevenways img {
   max-width: 550px;
 }
 
 .learnMore {
     background-color: @white;
+    img {
+        float: right;
+        max-height: 250px;
+        width: auto;
+        margin: 20px;
+    }
+    a {
+    color: @black;
+    }
 }
 
 .campaigns {
     background-color: @lightgreen;
+}
+
+.mission {
+    background-color: @gray;
+}
+
+.start {
+    background-color: @blue;
 }
 
 //footer
@@ -252,7 +275,7 @@ footer {
 .fa {
   padding: 20px;
   font-size: 30px;
-  width: 35px;
+  width: 25px;
   text-align: center;
   text-decoration: none;
   border-radius: 50%;
@@ -320,16 +343,62 @@ footer {
             }
         }
     }
+        h1 {
+        color: @white;
+        font-family: 'Open Sans', sans-serif;
+        font-weight: 700;
+        font-size: 2em;
+        }
+
+        h2 {
+            font-family:  'Lemonada', cursive;
+            font-weight: 700;
+            color: @green;
+            font-size: 1.3em;
+        }
+
+        h3 {
+            font-family: 'Open Sans', sans-serif;
+            font-size: 1.25em;
+            color: @black;
+        }
+
+        h4 {
+            font-family: 'Arvo', serif;
+            color:@blue;
+            font-size: 1.15em;
+        }
+
+        p {
+            font-family: 'Open Sans', sans-serif;
+            color: @black;
+        }
+
+        section {
+            padding: 15px 0px;
+        }
+
+        img {
+            width: 75%;
+            height: auto;
+            max-width: 400px;
+            padding: 10px;
+        }
+
+        .learnMore img {
+            max-height: 400px;
+            margin: 20px;
+        }
+
     /*columns of photos*/
-     figcaption {
-    font-size: 1.5em;
+    figcaption {
+        font-size: 1.5em;
     }
 
     .column {
-    float: left;
-    text-align: center;
-    width: 35%;
-    padding: 1%;
-  }
-
+        float: left;
+        text-align: center;
+        width: 31%;
+        padding: 1%;
+    }
 }
