--- a/css/main.css
+++ b/css/main.css
@@ -99,87 +99,168 @@ a:link,
 a:active {
   text-decoration: none;
 }
-/**header**/
-header ul {
+/**header new**/
+#wrapper {
+  width: 100%;
+}
+span[class^="icon-"] {
+  line-height: 2.5em;
+}
+nav {
+  width: 100vw;
+  background: #333;
+  color: #fff;
+  display: flex;
+  align-items: stretch;
+}
+nav a {
+  color: #fff;
+  padding: 0.5em 0.8em;
+  width: 100%;
+}
+nav ul {
   list-style-type: none;
+  display: flex;
   margin: 0;
   padding: 0;
-  overflow: hidden;
-  background-color: #ffffff;
-  font-size: 1.25em;
 }
-header li {
-  float: left;
+nav ul li {
+  position: relative;
 }
-header li a {
+nav ul li a {
   display: block;
-  color: #000000;
-  text-align: center;
-  padding: 15px;
+  overflow: hidden;
+  background: #ccc;
   text-decoration: none;
 }
-header li a:hover {
-  background-color: #154a96;
-  color: #ffffff;
-}
-header .active {
-  background-color: #154a96;
-  color: #ffffff;
-}
-header #small-header-logo {
-  width: 100%;
-  height: auto;
-  max-width: 100px;
-  padding-right: 25px;
-}
-.container {
-  padding: 0 5%;
-}
-#hamburger-icon img {
-  height: 100%;
-}
-#mobile-nav {
-  align-self: flex-end;
-}
-.sub-menu {
-  position: absolute;
-  background-color: #6a9923;
-  width: 100%;
-  left: 0;
-  text-align: center;
-  top: 0;
-  display: flex;
-  flex-direction: column;
-}
-.sub-menu ul {
-  margin-top: 10vh;
-}
-.sub-menu ul li {
-  padding: 30px;
-}
-.hidden {
-  height: 0;
-  width: 0;
-  overflow: hidden;
-  transition: width 0.3s ease-in-out;
-}
-.show {
-  height: 100%;
-  width: 100%;
-}
-#int-header {
-  display: flex;
-  flex-direction: column;
-}
-#int-header .header-nav {
-  height: 10%;
-}
-#int-header .header-bottom {
-  height: 250px;
-  display: flex;
+li.has-children {
   justify-content: center;
-  align-items: center;
 }
+li.has-children ul {
+  position: absolute;
+  top: 100%;
+  padding: 0;
+  flex-flow: column nowrap;
+}
+li.has-children ul li {
+  position: relative;
+}
+li.has-children ul li a {
+  width: 100%;
+  max-height: 0;
+  padding: 0;
+  padding-left: 2em;
+  transition: 500ms ease-in-out 50ms;
+  white-space: nowrap;
+}
+li.has-children:hover ul li a {
+  width: 100%;
+  max-height: 3em;
+  padding: 0.3em 0;
+  padding-left: 2em;
+  white-space: nowrap;
+}
+li.has-children:hover ul li:hover a {
+  background: #aaa;
+}
+/**header
+header {
+
+    ul {
+       list-style-type: none;
+       margin: 0; 
+       padding: 0;
+       overflow: hidden;
+       background-color:@white;
+       font-size: 1.25em;
+    }
+
+    li {
+       float: left;
+    }
+
+    li a {
+        display: block;
+        color: @black;
+        text-align: center;
+        padding: 15px;
+        text-decoration: none;
+    }
+
+    li a:hover {
+        background-color: @blue;
+        color: @white;
+    }
+    
+    .active {
+        background-color: @blue;
+        color: @white;
+    }
+
+   #small-header-logo {
+        width: 100%;
+        height: auto;
+        max-width: 100px;
+        padding-right: 25px;
+    }
+}
+
+//hamburger menu and header
+    .container {
+        padding: 0 5%;
+    }
+
+    #hamburger-icon img {
+        height: 100%;
+    }
+        
+    #mobile-nav {
+        align-self: flex-end;
+    }
+
+    .sub-menu {
+        position: absolute;
+        background-color: @green;
+        width: 100%;
+        left: 0;
+        text-align: center;
+        top:0;
+        display: flex;
+        flex-direction: column;
+        ul {
+            margin-top: 10vh;
+            li {
+                padding: 30px;
+            }
+        }
+    }
+
+    .hidden {
+        height:0;
+        width: 0;
+        overflow: hidden;
+        transition: width .3s ease-in-out;
+    }
+
+    .show {
+        height:100%;
+        width: 100%;
+    }
+
+    #int-header {
+        display:flex;
+        flex-direction: column;
+        .header-nav{
+            height: 10%;
+         }
+        .header-bottom {
+            height: 250px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+    }
+    **/
 .hero-image {
   background-image: url("/images/plastic.jpg");
   background-color: #000000;
@@ -301,33 +382,15 @@ footer {
 }
 /**media query for wider screens**/
 @media (min-width: 998px) {
-  header #page-header {
-    height: 100vh;
-    width: 20%;
-    background-color: #ffffff;
+  nav {
+    justify-content: center;
   }
-  header #page-header #desktop-nav {
-    display: block;
-  }
-  header #page-header h1 {
-    font-size: 2.5rem;
-  }
-  header #hamburger-icon {
+  nav .collapse {
     display: none;
+    height: 0;
   }
-  header #desktop-menu {
-    height: 100vh;
-    text-align: right;
-  }
-  header #desktop-menu ul li {
-    padding: 30px 0;
-    list-style: none;
-  }
-  header #int-header {
-    flex-direction: row;
-  }
-  header #int-header .header-nav {
-    width: 30%;
+  nav .collapse ul {
+    position: relative;
   }
   h1 {
     color: #ffffff;
