--- a/less/main.less
+++ b/less/main.less
@@ -69,8 +69,77 @@ a {
 a:link, a:active {
     text-decoration: none;
 }
-    
-/**header**/
+/**header new**/
+#wrapper {
+  width: 100%;
+}
+span[class^="icon-"] {
+  line-height: 2.5em;
+}
+
+nav {
+  width: 100vw;
+  background: #333;
+  color: #fff;
+  display: flex;
+  align-items: stretch;
+
+    a {
+    color: #fff;
+    padding: 0.5em 0.8em;
+    width: 100%;
+    }
+
+    ul {
+    list-style-type: none;
+    display: flex;
+    margin: 0;
+    padding: 0;
+        li {
+        position: relative;
+            a {
+            display: block;
+            overflow: hidden;
+            background: #ccc;
+            text-decoration: none;
+            }
+        }
+    }
+}
+
+  li.has-children {
+    justify-content: center;
+        ul {
+            position: absolute;
+            top: 100%;
+            padding: 0;
+            flex-flow: column nowrap;
+            li {
+            position: relative;     
+                a {
+                    width: 100%;
+                    max-height: 0;
+                    padding: 0;
+                    padding-left: 2em;
+                    transition: 500ms ease-in-out 50ms;
+                    white-space: nowrap;
+                }
+            }
+        }
+  }
+
+  li.has-children:hover ul li a {
+    width: 100%;
+    max-height: 3em;
+    padding: 0.3em 0;
+    padding-left: 2em;
+    white-space: nowrap;
+    } 
+
+  li.has-children:hover ul li:hover a {
+    background: #aaa;
+    }
+/**header
 header {
 
     ul {
@@ -167,6 +236,7 @@ header {
             align-items: center;
         }
     }
+    **/
 
 //*hero image container**/
 .hero-image {
@@ -310,39 +380,16 @@ footer {
 
 /**media query for wider screens**/
 @media (min-width: @laptop) {
-    header {
-        #page-header {
-            height:100vh;
-            width: 20%;
-            background-color: @white;
-            #desktop-nav {
-                display: block;
-            }
-            h1 {
-                font-size: 2.5rem;
-            }
-        }
-
-        #hamburger-icon {
+     nav {
+        justify-content: center;
+        .collapse {
             display: none;
-        }
-        #desktop-menu {
-            height: 100vh;
-            text-align: right;
-            ul {
-                li {
-                    padding: 30px 0;
-                    list-style: none;
-                }
-             }
-        }
-        #int-header {
-            flex-direction: row;
-            .header-nav {
-                width: 30%;
+            height: 0;
+        ul {
+            position: relative;
             }
-        }
-    }
+        }    
+    }  
         h1 {
         color: @white;
         font-family: 'Open Sans', sans-serif;
