--- a/less/main.less
+++ b/less/main.less
@@ -79,10 +79,17 @@ span[class^="icon-"] {
 
 nav {
   width: 100vw;
-  background: #333;
-  color: #fff;
+  background: @white;
+  color: @black;
   display: flex;
-  align-items: stretch;
+  
+
+    img {
+        width: 100%;
+        height: auto;
+        max-width: 120px;
+        float: left;
+    }
 
     a {
     color: #fff;
@@ -97,6 +104,7 @@ nav {
     padding: 0;
         li {
         position: relative;
+        float: right;
             a {
             display: block;
             overflow: hidden;
