--- a/less/main.less
+++ b/less/main.less
@@ -302,9 +302,14 @@ footer {
             height: 0;
         ul {
             position: relative;
-
+            font-size: 2em; 
                 li {
-                    font-size: 2em; 
+                  float: left; 
+                
+                    li a {
+                        display: block;
+                        padding: 15px;
+                    }
                 }
             }
         }    
