--- a/css/main.css
+++ b/css/main.css
@@ -54,31 +54,31 @@ h1 {
   font-family: 'Open Sans', sans-serif;
   font-weight: 700;
   font-size: 1.25em;
-  padding: 5px;
+  padding: 2%;
 }
 h2 {
   font-family: 'Lemonada', cursive;
   font-weight: 700;
   color: #6a9923;
   font-size: 1.1em;
-  padding: 5px;
+  padding: 2%;
 }
 h3 {
   font-family: 'Open Sans', sans-serif;
   font-size: 1em;
   color: #000000;
-  padding: 3px;
+  padding: 2%;
 }
 h4 {
   font-family: 'Arvo', serif;
   color: #154a96;
   font-size: .75em;
-  padding: 3px;
+  padding: 2%;
 }
 p {
   font-family: 'Open Sans', sans-serif;
   color: #000000;
-  padding: 10px;
+  padding: 2%;
 }
 section {
   padding: 10px 0px;
@@ -108,11 +108,12 @@ span[class^="icon-"] {
 }
 nav {
   width: 100vw;
-  background: #ffffff;
+  background: #cccccc;
   color: #000000;
   display: flex;
+  flex-direction: column;
 }
-nav img {
+nav #small-header-logo {
   width: 100%;
   height: auto;
   max-width: 100px;
@@ -131,12 +132,12 @@ nav ul {
 }
 nav ul li {
   position: relative;
-  float: right;
+  float: left;
 }
 nav ul li a {
   display: block;
   overflow: hidden;
-  background: #ccc;
+  background: #cccccc;
   text-decoration: none;
 }
 li.has-children {
@@ -223,6 +224,7 @@ figcaption {
   font-family: myriad-pro, sans-serif;
   font-size: 1.25em;
   text-align: center;
+  padding: 2%;
 }
 /*section-specific formatting changes*/
 #sevenways img {
@@ -243,7 +245,8 @@ figcaption {
 .campaigns {
   background-color: #a5dc69;
 }
-.mission {
+.mission,
+.partners {
   background-color: #6d6b69;
 }
 .start {
@@ -293,10 +296,11 @@ footer {
   nav {
     justify-content: center;
   }
-  nav img {
-    width: 20%;
+  nav #small-header-logo {
+    width: 100%;
     height: auto;
-    max-width: 120px;
+    max-width: 100px;
+    padding-right: 25px;
   }
   nav .collapse {
     display: none;
@@ -312,6 +316,13 @@ footer {
   nav .collapse ul li li a {
     display: block;
     padding: 15px;
+    text-align: center;
+  }
+  nav .collapse ul li a:hover {
+    background-color: #154a96;
+  }
+  nav .collapse ul li .active {
+    background-color: #154a96;
   }
   h1 {
     color: #ffffff;
